Fix: Shift score closer to center

--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,7 @@ div.title{
 
     p.score{
         margin-left:auto;
+        margin-right:auto;
     }
 }
 
@@ -92,6 +93,7 @@ span.title2{
         text-align:center;
         p.score{
             margin-left:0;
+            margin-right:0;
         }
     }
 
